--- a/client/package.json
+++ b/client/package.json
@@ -19,14 +19,17 @@
     "@eslint/js": "^9.35.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.2",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
-    "postcss": "^8.5.6",
+    "postcss": "^8.4.38",
     "tailwindcss": "^3.4.13",
-    "vite": "^7.1.6"
+    "vite": "^5.4.11"
+  },
+  "overrides": {
+    "rollup": "^4.53.1"
   }
 }
