--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "@eslint/js": "^9.35.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "4.3.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -28,7 +28,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.11"
+    "vite": "5.2.13"
   },
   "overrides": {
     "rollup": "^4.53.1"
